--- a/src/index.css
+++ b/src/index.css
@@ -207,7 +207,6 @@
     animation-delay: -1.5s;
   }
 
-
   /* section */
   .section-container {
     @apply min-h-screen flex flex-col justify-start px-6 sm:px-10 md:px-20 pt-20 sm:pt-32 md:pt-40;
@@ -318,13 +317,19 @@
     @apply fixed z-[100] text-sm shadow-lg rounded-md px-4 py-3;
     background-color: var(--color-background-card);
 
-    /* mobile positioning */
-    @apply bottom-4 left-1/2 -translate-x-1/2 flex flex-row gap-4;
-
-    /* desktop positioning */
-    @apply md:top-2/5 md:left-6 md:bottom-auto md:translate-y-[-50%] md:translate-x-0 md:flex-col;
+    /* mobile positioning*/
+    @apply bottom-2 right-2 flex flex-row gap-4;
 
     @apply transition-all duration-500 ease-in-out;
+  }
+
+  /* desktop positioning*/
+  @media (min-width: 768px) {
+    .floating-contact-bar {
+      @apply md:top-2/5 md:left-6 md:bottom-auto md:translate-y-[-50%] md:translate-x-0 md:flex-col;
+
+      @apply right-auto bottom-auto;
+    }
   }
 
   .floating-contact-bar a {
